# This file is part of threading-support. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/threading-support/master/COPYRIGHT. No part of threading-support, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016 The developers of threading-support. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/threading-support/master/COPYRIGHT.

[package]
name = "threading-support"
description = "code playing with rust"
keywords = ["rust", "playing"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/threading-support/blob/master/README.md"
homepage = "https://github.com/lemonrock/threading-support"
repository = "https://github.com/lemonrock/threading-support.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
build = "src/c/build.rs"
publish = false
version = "0.0.0"

[replace]
"libc:0.2.11" = { git = "https://github.com/lemonrock/libc" }

[dependencies]
libc = "0.2.11"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "^0.2"

[build-dependencies]
gcc = "0.3"
